[package]
name = "cardinal_creator"
version = "0.1.0"
publish = false
authors = ["Mattia Tucksen <mtucksen@gmail.com>"]
edition = "2021"
license = "MIT or Apache 2.0"
readme = "README.md"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
dev = [
    "bevy/dynamic",
]

[dependencies]
bevy = { version = "0.8", default-features = false, features = ["bevy_asset", "bevy_winit", "render", "png", "x11"] }
bevy_asset_loader = "0.12"
bevy_kira_audio = "0.11"
iyes_loopless = "0.7"
iyes_progress = "0.4"

[build-dependencies]
embed-resource = "1.4"
